# lcmware-template-cpp

./: CMakeLists.txt  main.cpp
msg/: custom_types.lcm
